--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -40,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jonathan-jablonski.github.io/react-user-directory/"
+  "homepage": "https://jonathan-jablonski.github.io/react-user-directory/",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
