--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jonathan-jablonski.github.io/react-user-directory/",
+  "homepage": "https://jonathan-jablonski.github.io/react-user-directory",
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
